footer styles changed

--- a/src/jade/promezhutuslugi.jade
+++ b/src/jade/promezhutuslugi.jade
@@ -44,6 +44,7 @@ block main
 								a(href="#").menu-promezhutuslugi__link Повышение квалификации
 					.promezhutuslugi__right-block
 						//- Блок с контентом
+						.arrow
 						.duoble-block
 							//- Клас для отображения контента в две колонки, первой колонке нужно дать клас .first-block а второй .second-block
 							.first-block
