--- a/src/jade/_includes/_layout/_footer.jade
+++ b/src/jade/_includes/_layout/_footer.jade
@@ -4,10 +4,10 @@
 footer.footer
 	.container
 		.footer__logo-wrap
-			a(href="#").footer__logo-link
+			a(href="index.html").footer__logo-link
 				img.footer__logo-img(src="img/icons/logo-footer.svg", alt="")
-			a(href="#").footer__logo-dscr.service__link
-				| Международная Система Сертификации
+				span.footer__logo-dscr
+					| Международная Система Сертификации
 		.footer__service-items
 			.footer__service-item
 				.footer__service-title.footer__service-title--mb
