--- a/src/sass/layout/_style.scss
+++ b/src/sass/layout/_style.scss
@@ -42,8 +42,8 @@
 }
 .link-btn{
 	font-family: 'ubuntubold';
-	@include font-size(16px);
-	color: #143d42;
+	@include font-size(14px);
+	color: #434a54;
 }
 *{
 	box-sizing: border-box;
