--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -175,7 +175,7 @@
 	&__wrap{
 		display: inline-block;
 		text-align: justify;
-		padding-bottom: 3px;
+		padding-bottom: 10px;
 		&:last-child:after{
 			content: '';
 			width: 100%;
@@ -385,6 +385,7 @@
 			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			z-index:-2;
+			@include border-radius(7px);
 	}
 	.read-all{
 		float: right;
@@ -409,6 +410,7 @@
 			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			z-index:-2;
+			@include border-radius(7px);
 	}
 
 	.news-block{
