--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -464,7 +464,7 @@
 		    font-family: 'ubuntubold';
 		}
 		ul {
-			list-style-type: disk;
+			list-style: disc;
 		}
 		li {
 			display: list-item;
