--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -308,6 +308,11 @@
 			    font-family: 'ubuntulight';
 			    font-weight: normal;
 			}
+			.slider-subtitle{
+				font-size: 24px;
+				line-height: 34px;
+			    font-family: 'ubunturegular';
+			}
 			margin-bottom: 50px;
 		}
 		.slider-buy{
