main page modified

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -141,7 +141,7 @@ block main
 				| Последние новости
 		.last-news-wrap
 			.container
-				.news-wrap
+				.news-wrap.active
 					-for(var j=1;j<=3;j++)
 						.news-block
 							.news__img-line
