--- a/src/jade/odnausluga-v2.jade
+++ b/src/jade/odnausluga-v2.jade
@@ -15,7 +15,7 @@ block main
 			.services__title-wrap
 				h1.h1
 					| ГОСТ Р 54762-2011/ISO/TS 22002-1:2009 <br>
-					| «Программы предварительных требований 
+					| «Программы предварительных требований
 					| по безопасности пищевой продукции»
 			.services__content-wrap
 				.services-side-left
@@ -23,224 +23,225 @@ block main
 						| Сертификация систем менеджмента качества
 					ul.services__list
 						li.services__item
-							a.services__link.services__link_active(href="#") 
+							a.services__link.services__link_active(href="#")
 								| ХАССП
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ИСО 9001 - 2015 (ISO 9001:2015) 
+								| ГОСТ Р ИСО 9001 - 2015 (ISO 9001:2015)
 								| «Системы менеджмента качества»
 						li.services__item
 							a.services__link(href="#")
 								| Интегрированные системы менеджмента
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005) 
+								| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
 								| «Системы менеджмента безопасности пищевой продукции»
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ИСО/ТУ 16949-2009 (ГОСТ Р 51814.1-2004) 
-								| «Требования к системе менеджмента качества 
-								| в автомобильной промышленности 
+								| ГОСТ Р ИСО/ТУ 16949-2009 (ГОСТ Р 51814.1-2004)
+								| «Требования к системе менеджмента качества
+								| в автомобильной промышленности
 								| и организациях, производящих соответствующие запасные части»
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ИСО 13485-2011 (ISO 13485:2003) «Изделия медицинские. 
-								| Системы менеджмента качества. 
+								| ГОСТ Р ИСО 13485-2011 (ISO 13485:2003) «Изделия медицинские.
+								| Системы менеджмента качества.
 								| Системные требования для целей регулирования»
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ РВ 0015-002-2012 «Система менеджмента 
-								| предприятий оборонно-промышленного комплекса. 
+								| ГОСТ РВ 0015-002-2012 «Система менеджмента
+								| предприятий оборонно-промышленного комплекса.
 								| Защита государственной тайны»
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ИСО/МЭК 20000 (ISO 20000) «Адаптация международного 
+								| ГОСТ Р ИСО/МЭК 20000 (ISO 20000) «Адаптация международного
 								| стандарта ISO 20000 под российский рынок»
 						li.services__item
 							a.services__link(href="#")
-								| 'ГОСТ Р ИСО/ТУ 29001-2007 «Система менеджмента качества организаций, 
-								| поставляющих продукцию и предоставляющих услуги в нефтяной, 
-								| нефтехимической и газовой промышленности»', 
+								| 'ГОСТ Р ИСО/ТУ 29001-2007 «Система менеджмента качества организаций,
+								| поставляющих продукцию и предоставляющих услуги в нефтяной,
+								| нефтехимической и газовой промышленности»',
 						li.services__item
 							a.services__link(href="#")
-								| ГОСТ Р ЕН 9100-2011 «Системы менеджмента качества 
-								| организаций авиационной, космической и 
+								| ГОСТ Р ЕН 9100-2011 «Системы менеджмента качества
+								| организаций авиационной, космической и
 								| оборонных отраслей промышленности»
 				.services-side-right
 					.services-tringle-wrap
 						ul.services-tringle__list
 							li.services-tringle__item
 								a(href="#").services-tringle__link
-									| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005) 
-									| «Системы менеджмента безопасности 
+									| ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005)
+									| «Системы менеджмента безопасности
 									| пищевой продукции»
 							li.services-tringle__item
 								a(href="#").services-tringle__link.services__link_active
-									| ГОСТ Р 54762-2011/ISO/TS 22002-1:2009 
-									| «Программы предварительных требований по 
+									| ГОСТ Р 54762-2011/ISO/TS 22002-1:2009
+									| «Программы предварительных требований по
 									| безопасности пищевой пр
 							li.services-tringle__item
 								a(href="#").services-tringle__link
-									| ГОСТ Р 51705.1-2001 - Системы качества. 
-									| Управление качеством пищевых продуктов на основе 
+									| ГОСТ Р 51705.1-2001 - Системы качества.
+									| Управление качеством пищевых продуктов на основе
 									| принципов ХАССП Общие требования»
 					.services__content-wrap
 						.img
 						.services__dscr
-								p 
-									| И дейные соображения высшего порядка, 
-									| а также сложившаяся структура организации 
-									| играет важную роль в формировании модели 
-									| развития. Значимость этих проблем настолько 
-									| очевидна, что новая модель организационной. 
-									| Идейные соображения высшего порядка, 
-									| а также сложившаяся структура организации 
-									| играет важную роль в формировании модели 
-									| развития. Значимость этих проблем настолько
-									| очевидна, что новая модель организационной. 
-									| Идейные соображения высшего порядка, 
+								p
+									| И дейные соображения высшего порядка,
 									| а также сложившаяся структура организации
-									| играет важную роль в формировании модели 
-									| развития. Значимость этих проблем настолько 
-									| очевидна, что новая модель организационной 
+									| играет важную роль в формировании модели
+									| развития. Значимость этих проблем настолько
+									| очевидна, что новая модель организационной.
+									| Идейные соображения высшего порядка,
+									| а также сложившаяся структура организации
+									| играет важную роль в формировании модели
+									| развития. Значимость этих проблем настолько
+									| очевидна, что новая модель организационной.
+									| Идейные соображения высшего порядка,
+									| а также сложившаяся структура организации
+									| играет важную роль в формировании модели
+									| развития. Значимость этих проблем настолько
+									| очевидна, что новая модель организационной
 					h2.h2
 						| Пакеты услуг по сертификации
-					.services__prices-wrap
-						.services__prices-item
-							.services__prices-title
-								| Упрощенное внедрение
-							ul.services-items__list
-								li.services-items__item
-									| Cертификат
-								li.services-items__item
-									| Сертификат на английском 
-								li.services-items__item
-									| Разрешение на использование знака соответствия
-								li.services-items__item
-									| Сертификаты экспертов-аудиторов
-								li.services-items__item
-									| Знак соответствия
-								li.services-items__item
-									| Обучение сотрудников
-								li.services-items__item
-									| Типовая документация
-								li.services-items__item
-									| Срок выполнения 1 неделя
-							.services__btn-wrap
-								.price-wrap
-									span.item_price
-										| от 
-									h2.h2
-										| 25 000 
-								a(href="#").btn_price
-									| Заказать
-						.services__prices-item
-							.services__prices-title
-								| Упрощенное внедрение
-							ul.services-items__list
-								li.services-items__item
-									| Cертификат
-								li.services-items__item
-									| Сертификат на английском 
-								li.services-items__item
-									| Разрешение на использование знака соответствия
-								li.services-items__item
-									| Сертификаты экспертов-аудиторов
-								li.services-items__item
-									| Знак соответствия
-								li.services-items__item
-									| Обучение сотрудников
-								li.services-items__item
-									| Индивидуальная документация
-								li.services-items__item
-									| Срок выполнения от 3х до 4х недель
-							.services__btn-wrap
-								.price-wrap
-									span.item_price
-										| от 
-									h2.h2
-										| 25 000 
-								a(href="#").btn_price
-									| Заказать
-						.services__prices-item
-							.services__prices-title
-								| Упрощенное внедрение
-							ul.services-items__list
-								li.services-items__item
-									| Cертификат
-								li.services-items__item
-									| Сертификат на английском 
-								li.services-items__item
-									| Разрешение на использование знака соответствия
-								li.services-items__item
-									| Сертификаты экспертов-аудиторов
-								li.services-items__item
-									| Знак соответствия
-								li.services-items__item
-									| Обучение сотрудников
-								li.services-items__item
-									| Диагностический аудит
-								li.services-items__item
-									| Индивидуальная расширенная  документация*
-								li.services-items__item
-									| Срок выполнения от 4х до 5ти недель
-							.services__btn-wrap
-								.price-wrap
-									span.item_price
-										| от 
-									h2.h2
-										| 25 000 
-								a(href="#").btn_price
-									| Заказать
-						.services__prices-item
-							.services__prices-title
-								| Упрощенное внедрение
-							ul.services-items__list
-								li.services-items__item
-									| Cертификат
-								li.services-items__item
-									| Сертификат на английском 
-								li.services-items__item
-									| Разрешение на использование знака соответствия
-								li.services-items__item
-									| Сертификаты экспертов-аудиторов
-								li.services-items__item
-									| Знак соответствия
-								li.services-items__item
-									| Обучение сотрудников
-								li.services-items__item
-									| Диагностический аудит
-								li.services-items__item
-									| Выезд специалиста
-								li.services-items__item
-									| Индивидуальная документация с выездом**
-								li.services-items__item
-									| Срок выполнения от 2х до 3х месяце
-							.services__btn-wrap
-								.price-wrap
-									span.item_price
-										| от 
-									h2.h2
-										| 25 000 
-								a(href="#").btn_price
-									| Заказать
+					.services__prices-wrap-sh
+						.services__prices-wrap
+							.services__prices-item
+								.services__prices-title
+									| Упрощенное внедрение
+								ul.services-items__list
+									li.services-items__item
+										| Cертификат
+									li.services-items__item
+										| Сертификат на английском
+									li.services-items__item
+										| Разрешение на использование знака соответствия
+									li.services-items__item
+										| Сертификаты экспертов-аудиторов
+									li.services-items__item
+										| Знак соответствия
+									li.services-items__item
+										| Обучение сотрудников
+									li.services-items__item
+										| Типовая документация
+									li.services-items__item
+										| Срок выполнения 1 неделя
+								.services__btn-wrap
+									.price-wrap
+										span.item_price
+											| от
+										h2.h2
+											| 25 000
+									a(href="#").btn_price
+										| Заказать
+							.services__prices-item
+								.services__prices-title
+									| Упрощенное внедрение
+								ul.services-items__list
+									li.services-items__item
+										| Cертификат
+									li.services-items__item
+										| Сертификат на английском
+									li.services-items__item
+										| Разрешение на использование знака соответствия
+									li.services-items__item
+										| Сертификаты экспертов-аудиторов
+									li.services-items__item
+										| Знак соответствия
+									li.services-items__item
+										| Обучение сотрудников
+									li.services-items__item
+										| Индивидуальная документация
+									li.services-items__item
+										| Срок выполнения от 3х до 4х недель
+								.services__btn-wrap
+									.price-wrap
+										span.item_price
+											| от
+										h2.h2
+											| 25 000
+									a(href="#").btn_price
+										| Заказать
+							.services__prices-item
+								.services__prices-title
+									| Упрощенное внедрение
+								ul.services-items__list
+									li.services-items__item
+										| Cертификат
+									li.services-items__item
+										| Сертификат на английском
+									li.services-items__item
+										| Разрешение на использование знака соответствия
+									li.services-items__item
+										| Сертификаты экспертов-аудиторов
+									li.services-items__item
+										| Знак соответствия
+									li.services-items__item
+										| Обучение сотрудников
+									li.services-items__item
+										| Диагностический аудит
+									li.services-items__item
+										| Индивидуальная расширенная  документация*
+									li.services-items__item
+										| Срок выполнения от 4х до 5ти недель
+								.services__btn-wrap
+									.price-wrap
+										span.item_price
+											| от
+										h2.h2
+											| 25 000
+									a(href="#").btn_price
+										| Заказать
+							.services__prices-item
+								.services__prices-title
+									| Упрощенное внедрение
+								ul.services-items__list
+									li.services-items__item
+										| Cертификат
+									li.services-items__item
+										| Сертификат на английском
+									li.services-items__item
+										| Разрешение на использование знака соответствия
+									li.services-items__item
+										| Сертификаты экспертов-аудиторов
+									li.services-items__item
+										| Знак соответствия
+									li.services-items__item
+										| Обучение сотрудников
+									li.services-items__item
+										| Диагностический аудит
+									li.services-items__item
+										| Выезд специалиста
+									li.services-items__item
+										| Индивидуальная документация с выездом**
+									li.services-items__item
+										| Срок выполнения от 2х до 3х месяце
+								.services__btn-wrap
+									.price-wrap
+										span.item_price
+											| от
+										h2.h2
+											| 25 000
+									a(href="#").btn_price
+										| Заказать
 					.services__stars-wrap
 						p.stars-item
-							| В этом случае документация 
-							| разрабатывается индивидуально 
-							| под вашу компанию на основании 
-							| диагностического аудита, работы 
-							| проводятся дистанционно, путем 
-							| общения по телефону, обмена 
-							| документацией по почте и проведения 
+							| * В этом случае документация
+							| разрабатывается индивидуально
+							| под вашу компанию на основании
+							| диагностического аудита, работы
+							| проводятся дистанционно, путем
+							| общения по телефону, обмена
+							| документацией по почте и проведения
 							| онлайн конференций.
 						p.stars-item
-							| В этом случае документация 
-							| разрабатывается индивидуально 
-							| под вашу компанию, на основании 
-							| диагностического аудита, а работы 
-							| проводятся непосредственно на 
-							| производстве. 
+							| ** В этом случае документация
+							| разрабатывается индивидуально
+							| под вашу компанию, на основании
+							| диагностического аудита, а работы
+							| проводятся непосредственно на
+							| производстве.
 		.more__ques-wrap
 			.container
 				.more__ques-title
