--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -338,11 +338,11 @@
 	}
 }
 .last-news{
-	padding-bottom: 55px;
+	padding-bottom: 33px;
 }
 .last-news-wrap {
 	overflow: hidden;
-	padding-bottom: 8px;
+	padding-bottom: 30px;
 	position: relative;
 	.container{
 		position: relative;
@@ -374,23 +374,32 @@
 	}
 }
 .news-wrap{
-		&:before{
-			@include transition(.25s);
-		}
-		&:hover:before{
-			position: absolute;
-			content: '';
-			display: block;
-			width: 100%;
-			top:0;
-			bottom: 0;
-			left: -50%;
-			background: #f9f9fa;
-			-webkit-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			z-index:-2;
-			@include border-radius(7px);
+	&:before{
+		@include transition(.25s);
+	}
+	&.active:before{
+		position: absolute;
+		content: '';
+		display: block;
+		width: 250%;
+		top:0;
+		bottom: 0;
+		left: -200%;
+		background: #f9f9fa;
+		z-index:-2;
+		@include border-radius(7px);
+	}
+	&.active:after{
+		display: inline-block;
+		position: absolute;
+		content: '';
+		width: 70%;
+		top: 100%;
+		left: -20%;
+		height: 30px;
+		background: url(../img/icons/block-shadow.png);
+		background-repeat: no-repeat;
+		background-position: top right;
 	}
 	.read-all{
 		float: right;
@@ -402,22 +411,30 @@
 	&:before{
 			@include transition(.25s);
 	}
-		&:hover:before{
-			position: absolute;
-			content: '';
-			display: block;
-			width: 100%;
-			top:0;
-			bottom: 0;
-			right: -50%;
-			background: #f9f9fa;
-			-webkit-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
-			z-index:-2;
-			@include border-radius(7px);
+	&.active:before{
+		position: absolute;
+		content: '';
+		display: block;
+		width: 250%;
+		top:0;
+		bottom: 0;
+		right: -200%;
+		background: #f9f9fa;
+		z-index:-2;
+		@include border-radius(7px);
 	}
-
+	&.active:after{
+		display: inline-block;
+		position: absolute;
+		content: '';
+		width: 70%;
+		top: 100%;
+		right: -20%;
+		height: 30px;
+		background: url(../img/icons/block-shadow.png);
+		background-repeat: no-repeat;
+		background-position: top left;
+	}
 	.news-block{
 		margin-left: 15px;
 
