--- a/src/sass/layout/_odnausluga-v2.scss
+++ b/src/sass/layout/_odnausluga-v2.scss
@@ -35,7 +35,7 @@
 	}
 	&__content-wrap{
 		@include clearfix();
-		margin-bottom: 50px;
+		margin-bottom: 87px;
 	}
 	&-side{
 		&-left{
@@ -92,7 +92,6 @@
 	}
 	&__prices{
 		&-wrap{
-			@include clearfix();
 			clear: both;
 			overflow: hidden;
 			border-radius: 6px;
@@ -103,9 +102,21 @@
 			display: flex;
 			align-items: stretch;
 			margin-bottom: 35px;
-			-webkit-box-shadow: 0 15px 20px -19px rgba(0,0,0,.5);
-			-moz-box-shadow: 0 15px 20px -19px rgba(0,0,0,.5);
-			 box-shadow: 0 15px 20px -19px rgba(0,0,0,.5);
+			&-sh{
+				position: relative;
+				 &:after{
+				 	content: '';
+				 	display: block;
+					position: absolute;
+					bottom: 0;
+					margin-bottom: -32px;
+					width: 100%;
+					left: 0;
+					height: 35px;
+					background: url(../img/icons/accord-shadow.png) 50% no-repeat;
+					background-size: contain;
+				 }
+			}
 		}
 		&-item{
 			position: relative;
@@ -190,27 +201,26 @@
 	}
 	&__stars-wrap{
 		.stars-item{
-			text-indent: 15px;
 			position: relative;
 			text-align: justify;
 			margin-bottom: 15px;
 			&:last-child{
-				margin-bottom: 65px;
+				margin-bottom: 0;
 			}
-			&:nth-child(1){
-				&:before{
-					content: '*';
-					position: absolute;
-					margin-left: -27px;
-				}
-			}
-			&:nth-child(2){
-				&:before{
-					content: '**';
-					position: absolute;
-					margin-left: -31px;
-				}
-			}
+			// &:nth-child(1){
+			// 	&:before{
+			// 		content: '*';
+			// 		position: absolute;
+			// 		margin-left: -27px;
+			// 	}
+			// }
+			// &:nth-child(2){
+			// 	&:before{
+			// 		content: '**';
+			// 		position: absolute;
+			// 		margin-left: -31px;
+			// 	}
+			// }
 		}
 	}
 }
