--- a/src/sass/layout/_partners.scss
+++ b/src/sass/layout/_partners.scss
@@ -40,6 +40,7 @@
 		.img-wrap{
 			width: 980px;
 			margin-left: -80px;
+			margin-top: -42px;
 			.img-item{
 				width: 200px !important;
 				height: 80px !important;
@@ -47,6 +48,7 @@
 				text-align: center;
 				margin-left: 40px;
 				line-height: 80px;
+				margin-top: 42px;
 				img{
 					width: auto;
 					height: auto;
