--- a/src/jade/contacts.jade
+++ b/src/jade/contacts.jade
@@ -10,7 +10,8 @@ block main
 						a.breadcrumbs__link.breadcrumbs__link_active(href="#") Контакты
 			.contacts__title
 				h1.h1 Контакты
-			.contacts__adress-map
+		.contacts__adress-map
+			.container
 				.contacts__adress
 					.adress__wrap.contacts__item
 						.adress__title Адрес
@@ -21,6 +22,7 @@ block main
 						a(href="mailto:mss-standart@mail.ru") mss-standart@mail.ru
 				.contacts__map
 					#map_canvas
+		.container
 			.contacts__form
 				.form__title
 					h2.h2 Остались вопросы ?
