--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -85,6 +85,7 @@
 .contacts__adress-map{
 	margin-bottom: 65px;
 	min-height:570px; 	
+	background: #ffffff;
 }
 .wrap-to-clearfix{
 	@include clearfix();
