--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -448,6 +448,9 @@
 	.owl-dot.active{
 		background: #fff !important;
 	}
+	.owl-dot:hover{
+		background: #fff !important;
+	}
 	.gallery-banners{
 		.img-wrap {
 			margin-top: 0;
