--- a/src/sass/layout/_partners.scss
+++ b/src/sass/layout/_partners.scss
@@ -31,7 +31,7 @@
 			margin-right: 22px;
 			border-radius: 3px;
 			&:hover{
-				background: #29d694;
+				background: #6beea7;
 			}
 		}
 		.owl-dot.active{
